# CDA-llvm

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  manage.sh  svf.md
examples/: algorithm.c  algorithm.h  complex_flow.c  data_processor.c  data_processor.h  issue.c  main.c  main_flow.c  math_utils.c  math_utils.h  repetition_cases.c  repetition_cases.h  sample.c  timer.c  timer.h  types.h  vdm.c  vdm.h
issue1/: timer.c  timer.h
issue2/: timer.c  timer.h
scripts/: build_and_store_docker_images.sh  build_linux_binary_docker.sh  decode_binary.py
src/: analysis_output.cpp  analysis_output.h  callgraph_analysis.cpp  callgraph_analysis.h  callgraph_generator_main.cpp  cfg_generation.cpp  cfg_generation.h  cfg_generator.cpp  cfg_generator_main.cpp  cfgb_interpreter.cpp  common.h  main.cpp  model.h  path_finder.cpp  runtime_callgraph_generator_main.cpp  serialization.cpp  serialization.h  varuint.cpp  varuint.h
src/callgraph_generator/: analysis.cpp  analysis.h  main.cpp
src/cfg_generator/: generation.cpp  generation.h  main.cpp  output.cpp  output.h
src/common/: serialization.cpp
src/runtime_callgraph_generator/: callgraph_diff.cpp  main.cpp  runtime.cpp  runtime.h
src/runtime_callgraph_generator/templates/callgraph_diff/: report.css  report.html  report.js
